# pg

./: .gitattributes  .gitignore  .ignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.spdx  README.md  cliff.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md
.github/workflows/: audit.yml  cd.yml  ci.yml  clippy.yml  release.yml  test.yml
config/: cliff.toml
scripts/: build_debug.sh  build_release.sh  install  install-x86_64-apple-darwin.sh  install-x86_64-linux-gnu.sh  install.sh  release.sh  remove.sh  uninstall.sh
src/config/: lower.rs  mod.rs  num.rs  sym.rs  upper.rs
src/xcore/: chars.rs  core.rs
