[package]
name = "pg"
version = "0.2.0"
description = "Generate secure passwords."
authors = ["xTekC"]
repository = "https://github.com/xTekC/pg"
readme = "README.md"
homepage = "https://github.com/xTekC/pg"
documentation = "https://github.com/xTekC/pg/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "pg -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "pg"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
owo-colors = "3.5.0"
random-string = "1.0.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
